[gd_scene format=3 uid="uid://hxlw3a75kr5"]

[ext_resource type="Script" uid="uid://ba1s7cly6wg8s" path="res://bonki_spring/bonki_spring.gd" id="1_3vmkq"]
[ext_resource type="Shader" uid="uid://biuaw0b7g8awu" path="res://bonki_spring/bonki_spring_wash.gdshader" id="1_aw26t"]
[ext_resource type="Theme" uid="uid://bdw7totli4d4o" path="res://theme.tres" id="2_eu601"]
[ext_resource type="Texture2D" uid="uid://b3gtm45qy5usu" path="res://bonki_spring/art/bonki_spring_background_outlines.png" id="2_hgyec"]
[ext_resource type="Script" uid="uid://dfdl2akcigg6l" path="res://intro/overlay_control.gd" id="3_3vmkq"]
[ext_resource type="PackedScene" uid="uid://rhmsuguqvlui" path="res://bonki.tscn" id="4_33gn6"]
[ext_resource type="PackedScene" uid="uid://mfinu6h27hve" path="res://bonki_model/crowns/porcini/porcini_crown.tscn" id="5_u8own"]
[ext_resource type="Script" uid="uid://cj4ebql8lb5uh" path="res://bonki_appearance_parameters.gd" id="6_7vnbg"]
[ext_resource type="PackedScene" uid="uid://bcwti5ca3w0ae" path="res://bonki_model/crowns/kale/kale_crown.tscn" id="6_eu601"]
[ext_resource type="PackedScene" uid="uid://kbv6caifmeee" path="res://bonki_model/crowns/chanterelle/chanterelle_crown.tscn" id="7_7vnbg"]
[ext_resource type="PackedScene" uid="uid://d0npk7jyfjrob" path="res://bonki_model/crowns/enoki/enoki_crown.tscn" id="8_3nr71"]
[ext_resource type="PackedScene" uid="uid://ddmpstbkfm1ts" path="res://bonki_model/crowns/christmas_rose/christmas_rose_crown.tscn" id="9_3vmkq"]
[ext_resource type="PackedScene" uid="uid://c3pqpi4a10wy7" path="res://bonki_model/crowns/yellow_stagshorn/yellow_staghorn_crown.tscn" id="11_mcyv1"]
[ext_resource type="PackedScene" uid="uid://bvimp24y4f2pm" path="res://bonki_model/crowns/pincushion_moss/pincushion_moss_crown.tscn" id="13_niosp"]

[sub_resource type="Animation" id="Animation_eu601"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/UI_CanvasLayer/UnderUI_ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.6556212)]
}

[sub_resource type="Animation" id="Animation_mcyv1"]
resource_name = "fade_in"
length = 3.4333334
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/UI_CanvasLayer/UnderUI_ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_3vmkq"]
resource_name = "intro_01_fade_in_and_pan"
length = 6.766667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/UI_CanvasLayer/UnderUI_ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.4333334, 6.4666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0.654902)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mcyv1"]
_data = {
&"RESET": SubResource("Animation_eu601"),
&"fade_in": SubResource("Animation_mcyv1"),
&"intro_01_fade_in_and_pan": SubResource("Animation_3vmkq")
}

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_3nr71"]
sky_horizon_color = Color(0.8514824, 0.8954157, 0.87788594, 1)
ground_bottom_color = Color(0.2985006, 0.40523383, 0.23911458, 1)
ground_horizon_color = Color(0.8514824, 0.8954157, 0.87788594, 1)
energy_multiplier = 0.3

[sub_resource type="Sky" id="Sky_1q7h5"]
sky_material = SubResource("ProceduralSkyMaterial_3nr71")

[sub_resource type="Environment" id="Environment_8potb"]
background_mode = 2
background_energy_multiplier = 0.8
sky = SubResource("Sky_1q7h5")
ambient_light_source = 2
ambient_light_color = Color(0.5330367, 0.5330367, 0.5330367, 0.0627451)
ambient_light_energy = 0.32
tonemap_mode = 2

[sub_resource type="FastNoiseLite" id="FastNoiseLite_eu601"]
frequency = 0.0424

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_3vmkq"]
noise = SubResource("FastNoiseLite_eu601")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_eu601"]
render_priority = 1
shader = ExtResource("1_aw26t")
shader_parameter/bg_tex = ExtResource("2_hgyec")
shader_parameter/noise_tex = SubResource("NoiseTexture2D_3vmkq")
shader_parameter/wobble_strength = -0.002
shader_parameter/wobble_speed = 0.1
shader_parameter/wash_amount = 0.0
shader_parameter/wash_noise_strength = 0.8
shader_parameter/wash_noise_scale = 1.5

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_hgyec"]
size = Vector2(4035, 2752)

[sub_resource type="Shader" id="Shader_eu601"]
code = "shader_type spatial;
render_mode unshaded, cull_disabled;

uniform sampler2D bg_tex : source_color;
uniform sampler2D noise_tex : source_color;

uniform float wobble_strength = 0.006;
uniform float wobble_speed = 0.15;
uniform float wash_amount = 0.20; // 0 = no wash, 1 = fully white

// Controls how much the noise modulates the wash (0 = uniform wash, 1 = fully noise-driven)
uniform float wash_noise_strength = 0.8;

// Noise scale for the wash pattern (higher = finer grain)
uniform float wash_noise_scale = 1.5;

void fragment() {
    vec2 uv = UV;

    // Scroll noise in 2 directions for “living paper” feel
    float n1 = texture(noise_tex, uv + vec2(TIME * wobble_speed, 0.0)).r;
    float n2 = texture(noise_tex, uv + vec2(0.0, TIME * wobble_speed * 0.7)).r;

    // Center around 0 then offset UV
    vec2 offset = (vec2(n1, n2) - 0.5) * wobble_strength;
    vec4 col = texture(bg_tex, uv + offset);

    // Use noise to make wash uneven (sample noise at a separate scale, optionally also animated)
    float wnoise = texture(
        noise_tex,
        uv * wash_noise_scale + vec2(TIME * wobble_speed * 0.35, TIME * wobble_speed * 0.22)
    ).r;

    // Map to [-1, 1] so it can either reduce or increase the local wash
    float wmod = (wnoise - 0.5) * 2.0;

    // Local wash amount (clamped to [0,1])
    float local_wash = clamp(wash_amount * (1.0 + wmod * wash_noise_strength), 0.0, 1.0);

    // White wash mix (uneven)
    col.rgb = mix(col.rgb, vec3(1.0), local_wash);

    ALBEDO = col.rgb;
    ALPHA = col.a;
}"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_3vmkq"]
load_path = "res://.godot/imported/bonki_spring_background.png-7a3d287c778bf2fb96301f1739dbd77d.ctex"

[sub_resource type="FastNoiseLite" id="FastNoiseLite_mcyv1"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_niosp"]
width = 256
height = 256
noise = SubResource("FastNoiseLite_mcyv1")
seamless = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_enw64"]
render_priority = 0
shader = SubResource("Shader_eu601")
shader_parameter/bg_tex = SubResource("CompressedTexture2D_3vmkq")
shader_parameter/noise_tex = SubResource("NoiseTexture2D_niosp")
shader_parameter/wobble_strength = -0.13
shader_parameter/wobble_speed = 0.05
shader_parameter/wash_amount = 0.35
shader_parameter/wash_noise_strength = 0.8
shader_parameter/wash_noise_scale = 1.5

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_aw26t"]
size = Vector2(4035, 2752)

[sub_resource type="BoxShape3D" id="BoxShape3D_jwgr6"]
size = Vector3(8, 1, 13.14)

[sub_resource type="Resource" id="Resource_8potb"]
script = ExtResource("6_7vnbg")
body_color = Color(0.30397707, 0.5220329, 0.3002812, 1)
eye_shine_color = Color(0.99357384, 0.9930033, 0.9967472, 1)
eye_shadow_color = Color(0.4765517, 0.13424209, 0.22878361, 1)
eye_base_color = Color(0.4695109, 0.40198588, 0.6867396, 1)
wide_stretch_factor = 0.7341942817910259
horn_stretch_factor = 0.21066755392610084
long_stretch_factor = 0.6000000000000001
pearness_factor = 0.6476964300853414
tall_stretch_factor = -0.25641461466709004
wonkiness_factor = -0.7761711924647486
eyes_spread_factor = 0.02203979059741079
eyes_tilt_factor = -0.5320153749156015
eyes_height_factor = 0.6527926807619255
crown_pscn = ExtResource("6_eu601")
metadata/_custom_type_script = "uid://cj4ebql8lb5uh"

[sub_resource type="Resource" id="Resource_hgyec"]
script = ExtResource("6_7vnbg")
body_color = Color(0.8079085, 0.61464864, 0.12581487, 1)
eye_shine_color = Color(0.96000546, 0.9733961, 0.94578594, 1)
eye_shadow_color = Color(0.119365, 0.7812461, 0.612309, 1)
eye_base_color = Color(0.3505111, 0.42896453, 0.24929643, 1)
wide_stretch_factor = 0.22173768155696116
horn_stretch_factor = 0.23937367522846095
long_stretch_factor = -0.32518576461180004
pearness_factor = 0.33959512165771644
tall_stretch_factor = 0.351022629325872
wonkiness_factor = 0.7168254557984481
eyes_spread_factor = -0.5449031978401686
eyes_tilt_factor = -0.824366399233666
eyes_height_factor = 0.8479399391651292
crown_pscn = ExtResource("7_7vnbg")
metadata/_custom_type_script = "uid://cj4ebql8lb5uh"

[sub_resource type="Resource" id="Resource_enw64"]
script = ExtResource("6_7vnbg")
body_color = Color(0.5979117, 0.84839344, 0.8570307, 1)
eye_shine_color = Color(0.74453044, 0.8467967, 0.9311817, 1)
eye_shadow_color = Color(0.8700611, 0.58188856, 0.98741513, 1)
eye_base_color = Color(0.39362717, 0.54355854, 0.663224, 1)
wide_stretch_factor = -0.2613421598516723
horn_stretch_factor = 0.2343209165972888
long_stretch_factor = -0.9168348051096992
pearness_factor = -0.840389159488656
tall_stretch_factor = -0.4735751677297225
wonkiness_factor = 0.221511971113876
eyes_spread_factor = 0.5137292499168387
eyes_tilt_factor = -0.8770976681004125
eyes_height_factor = 0.7261140510526143
crown_pscn = ExtResource("9_3vmkq")
metadata/_custom_type_script = "uid://cj4ebql8lb5uh"

[sub_resource type="Resource" id="Resource_xuayo"]
script = ExtResource("6_7vnbg")
body_color = Color(0.7761471, 0.54365, 0.46615088, 1)
eye_shine_color = Color(0.7433268, 0.8848659, 0.8106516, 1)
eye_shadow_color = Color(0.16486627, 0.72550845, 0.8307324, 1)
eye_base_color = Color(0.20657235, 0.41857764, 0.3224275, 1)
wide_stretch_factor = 0.29492660233068246
horn_stretch_factor = 0.17936189571836636
long_stretch_factor = 0.08050668155124363
pearness_factor = 0.10058573979506358
tall_stretch_factor = -0.5563856161709111
wonkiness_factor = -0.7929373046973252
eyes_spread_factor = -0.5390067037903352
eyes_tilt_factor = -0.9025973272575448
eyes_height_factor = 0.04989729445969071
crown_pscn = ExtResource("5_u8own")
metadata/_custom_type_script = "uid://cj4ebql8lb5uh"

[sub_resource type="Resource" id="Resource_8an6b"]
script = ExtResource("6_7vnbg")
body_color = Color(0.6937208, 0.5965743, 0.046077445, 1)
eye_shine_color = Color(0.9333735, 0.96022207, 0.9042409, 1)
eye_shadow_color = Color(0.023926951, 0.80094767, 0.53645575, 1)
eye_base_color = Color(0.45685726, 0.54910195, 0.33866388, 1)
wide_stretch_factor = 0.7275910170445297
horn_stretch_factor = 0.28201504926501836
long_stretch_factor = -0.07545801776353667
pearness_factor = -0.22532730676613877
tall_stretch_factor = 0.3085014546205147
wonkiness_factor = 0.4333096572606767
eyes_spread_factor = -0.7136664694234138
eyes_tilt_factor = -0.2696478788599225
eyes_height_factor = 0.6073252925446548
crown_pscn = ExtResource("11_mcyv1")
metadata/_custom_type_script = "uid://cj4ebql8lb5uh"

[sub_resource type="Resource" id="Resource_qemrt"]
script = ExtResource("6_7vnbg")
body_color = Color(0.3681382, 0.4264087, 0.29691866, 1)
eye_shine_color = Color(0.9886194, 0.99312633, 0.99682266, 1)
eye_shadow_color = Color(0.48220903, 0.2804439, 0.08775253, 1)
eye_base_color = Color(0.2144267, 0.3780124, 0.49950188, 1)
wide_stretch_factor = 0.21183559316721823
horn_stretch_factor = 0.06551255499408659
long_stretch_factor = -0.0717335808965025
pearness_factor = -0.07982012609372002
tall_stretch_factor = -0.08269806730924667
wonkiness_factor = -0.42480014204202576
eyes_spread_factor = -0.07929613279265957
eyes_tilt_factor = -0.4391211008920435
eyes_height_factor = 1.0
crown_pscn = ExtResource("13_niosp")
metadata/_custom_type_script = "uid://cj4ebql8lb5uh"

[sub_resource type="Resource" id="Resource_m5uqd"]
script = ExtResource("6_7vnbg")
body_color = Color(0.512349, 0.3021029, 0.19697979, 1)
eye_shine_color = Color(0.7732006, 0.88685197, 0.88587326, 1)
eye_shadow_color = Color(0.006668804, 0.3454256, 0.38477004, 1)
eye_base_color = Color(0.23425499, 0.3885657, 0.38901213, 1)
wide_stretch_factor = -0.12358282858690162
horn_stretch_factor = 0.1449906139882932
long_stretch_factor = 0.4527965269414129
pearness_factor = 0.623456731802104
tall_stretch_factor = 0.9651710026093224
wonkiness_factor = 0.7872010144606394
eyes_spread_factor = -0.18417729914820224
eyes_tilt_factor = 0.8748534879331864
eyes_height_factor = 0.9005455585096371
crown_pscn = ExtResource("8_3nr71")
metadata/_custom_type_script = "uid://cj4ebql8lb5uh"

[node name="Control" type="Control" unique_id=1322998289]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_3vmkq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=427423972]
root_node = NodePath("../..")
libraries/ = SubResource("AnimationLibrary_mcyv1")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." unique_id=978347152]
autoplay = true

[node name="UI_CanvasLayer" type="CanvasLayer" parent="." unique_id=660336011]

[node name="UnderUI_ColorRect" type="ColorRect" parent="UI_CanvasLayer" unique_id=1892265757]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.6556212)

[node name="Overlay_Control" type="Control" parent="UI_CanvasLayer" unique_id=1824340417]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_eu601")
script = ExtResource("3_3vmkq")

[node name="TextPanel" type="Panel" parent="UI_CanvasLayer/Overlay_Control" unique_id=1805423604]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -517.0
offset_top = -929.0
offset_right = 502.0
offset_bottom = -262.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="RichTextLabel" type="RichTextLabel" parent="UI_CanvasLayer/Overlay_Control/TextPanel" unique_id=1305339625]
layout_mode = 0
offset_left = 146.0
offset_right = 890.0
offset_bottom = 655.0
mouse_filter = 1
text = "Placeholder text! The quick brown fox jumps over the lazy dog! Blah blah blah the quick brown fox!"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Choice_VBoxContainer" type="VBoxContainer" parent="UI_CanvasLayer/Overlay_Control" unique_id=1787296601]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 736.0
offset_bottom = -839.0
grow_horizontal = 2
grow_vertical = 2

[node name="Input_VBoxContainer" type="VBoxContainer" parent="UI_CanvasLayer/Overlay_Control" unique_id=2044564764]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 736.0
offset_bottom = -882.0
grow_horizontal = 2
grow_vertical = 2

[node name="LineEdit" type="LineEdit" parent="UI_CanvasLayer/Overlay_Control/Input_VBoxContainer" unique_id=1688442692]
layout_mode = 2
alignment = 1
max_length = 10

[node name="Button" type="Button" parent="UI_CanvasLayer/Overlay_Control/Input_VBoxContainer" unique_id=1732822292]
layout_mode = 2
text = "OK"

[node name="SubViewportContainer" type="SubViewportContainer" parent="." unique_id=798094945]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -851.5
offset_top = -108.0
offset_right = 1891.5
offset_bottom = 1988.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset_ratio = Vector2(0.5, 0.5)

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer" unique_id=135837145]
transparent_bg = true
handle_input_locally = false
size = Vector2i(2743, 2096)
render_target_update_mode = 4

[node name="WorldNode3D" type="Node3D" parent="SubViewportContainer/SubViewport" unique_id=77457003]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport/WorldNode3D" unique_id=702157635]
transform = Transform3D(0.04922702, 0.9388421, -0.3408112, -0.13421422, 0.344348, 0.92919916, 0.98972887, 0, 0.1429572, -0.2830286, 6.387801, 0)
light_energy = 0.06
light_specular = 0.216
shadow_enabled = true
shadow_opacity = 0.84
sky_mode = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/SubViewport/WorldNode3D" unique_id=34670161]
environment = SubResource("Environment_8potb")

[node name="CameraRigNode3D" type="Node3D" parent="SubViewportContainer/SubViewport/WorldNode3D" unique_id=566747869]
transform = Transform3D(0.9523159, 0.1737956, -0.2507776, 5.1532565e-09, 0.82191545, 0.5696095, 0.30511358, -0.5424482, 0.7827231, -3.1744606, 7.8342257, 4.6483293)

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport/WorldNode3D/CameraRigNode3D" unique_id=1732145892]
projection = 1
size = 8.0

[node name="Sprite3D" type="Sprite3D" parent="SubViewportContainer/SubViewport/WorldNode3D" unique_id=1967856981]
transform = Transform3D(0.36180916, 0.066129915, -0.25132558, 0, 0.31241474, 0.56927955, 0.11616422, -0.20597056, 0.7827875, 11.028, -20.8, -36.592)
material_override = SubResource("ShaderMaterial_eu601")
billboard = 1
render_priority = 2
texture = SubResource("PlaceholderTexture2D_hgyec")

[node name="BackgroundSprite3D" type="Sprite3D" parent="SubViewportContainer/SubViewport/WorldNode3D" unique_id=352621611]
transform = Transform3D(0.36180916, 0.066129915, -0.25132558, 0, 0.31241474, 0.56927955, 0.11616422, -0.20597056, 0.7827875, 11.027897, -20.83855, -36.591644)
material_override = SubResource("ShaderMaterial_enw64")
billboard = 1
texture = SubResource("PlaceholderTexture2D_aw26t")

[node name="PlatformUpperStaticBody3D" type="StaticBody3D" parent="SubViewportContainer/SubViewport/WorldNode3D" unique_id=799142861]
transform = Transform3D(1, 0, 0, 0, 0.9999999, 0, 0, 0, 1.0000002, 1.194847, 0.64344335, -4.4389315)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/WorldNode3D/PlatformUpperStaticBody3D" unique_id=1160241119]
transform = Transform3D(1, 1.5133992e-09, 0, 2.3283064e-10, 1, 0, 0, 0, 1, -0.00624156, 0.47392464, -3.6767683)
shape = SubResource("BoxShape3D_jwgr6")

[node name="PlatformLowerStaticBody3D" type="StaticBody3D" parent="SubViewportContainer/SubViewport/WorldNode3D" unique_id=943299447]
transform = Transform3D(1, 0, 0, 0, 0.9999999, 0, 0, 0, 1.0000002, 1.122787, -1.3273838, -2.9656336)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/WorldNode3D/PlatformLowerStaticBody3D" unique_id=421842754]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.3493125)
shape = SubResource("BoxShape3D_jwgr6")

[node name="Bonki" parent="SubViewportContainer/SubViewport/WorldNode3D" unique_id=2052834491 instance=ExtResource("4_33gn6")]
transform = Transform3D(0.35, 0, 0, 0, 0.35000002, 0, 0, 0, 0.35, 2.6913745, 1.8358347, -8.196823)
appearance = SubResource("Resource_8potb")

[node name="Bonki2" parent="SubViewportContainer/SubViewport/WorldNode3D" unique_id=1144760733 instance=ExtResource("4_33gn6")]
transform = Transform3D(0.35000002, 0, 0, 0, 0.35, 0, 0, 0, 0.35, -1.0000895, -0.5151367, -7.3474565)
appearance = SubResource("Resource_hgyec")

[node name="Bonki3" parent="SubViewportContainer/SubViewport/WorldNode3D" unique_id=525865550 instance=ExtResource("4_33gn6")]
transform = Transform3D(0.35, 0, 0, 0, 0.35, 0, 0, 0, 0.35, 0, 1.8358347, -9.196823)
appearance = SubResource("Resource_enw64")

[node name="Bonki4" parent="SubViewportContainer/SubViewport/WorldNode3D" unique_id=1515544183 instance=ExtResource("4_33gn6")]
transform = Transform3D(0.35, 0, 0, 0, 0.35, 0, 0, 0, 0.35, -1.7951776, -0.5151367, -4.1699023)
appearance = SubResource("Resource_xuayo")

[node name="Bonki5" parent="SubViewportContainer/SubViewport/WorldNode3D" unique_id=1968939506 instance=ExtResource("4_33gn6")]
transform = Transform3D(0.35, 0, 0, 0, 0.35, 0, 0, 0, 0.35, 0.42284167, -0.5151367, 0)
appearance = SubResource("Resource_8an6b")

[node name="Bonki6" parent="SubViewportContainer/SubViewport/WorldNode3D" unique_id=429063601 instance=ExtResource("4_33gn6")]
transform = Transform3D(0.35, 0, 0, 0, 0.35, 0, 0, 0, 0.35, -0.55667484, -0.5151367, -2.6318011)
appearance = SubResource("Resource_qemrt")

[node name="Bonki7" parent="SubViewportContainer/SubViewport/WorldNode3D" unique_id=1727677926 instance=ExtResource("4_33gn6")]
transform = Transform3D(0.35, 0, 0, 0, 0.35, 0, 0, 0, 0.35, 0.32050222, -0.5151367, -5.114398)
appearance = SubResource("Resource_m5uqd")

[node name="BonkiSpring" type="Node" parent="." unique_id=260375899]
